Fix issue #6. Header background and line height are now rendering properly on iPhone.

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -33,6 +33,7 @@
     font-variant: small-caps;
     vertical-align: 50%;
     letter-spacing: -1px;
+    margin-left: -10px;
     color: #666;    
     width: 100px;        
  }
@@ -141,14 +142,15 @@ footer {
 .content h1 {
   font-family: 'Lato', 'HelveticaNeue-Light', sans-serif;
   color: #3F3F3F;
-  font-size: 1.8em;  
+  font-size: 1.7em;  
 }
 
 .brand {  
   background-color: #90B0CC;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: -20px;
+  margin-right: -20px;
+  max-width: auto;  
   padding-bottom: 1em;
 }
 
@@ -196,10 +198,14 @@ footer {
   margin: 0 auto;
 }
 
-.posts li {
-  line-height: 200%;
+.posts li {  
+  line-height: 90%;
   list-style: none;
 }
+.posts li p {
+  margin-bottom: 25px;
+}
+
 .posts span {
   float: right;
   text-transform: uppercase;
